fix: duplicate align-items

--- a/client/src/components/Header/components/universal-nav.css
+++ b/client/src/components/Header/components/universal-nav.css
@@ -105,7 +105,6 @@
   white-space: normal;
   min-height: var(--header-height);
   width: 100%;
-  align-items: center;
   border: none;
 }
 
